# aemo_data

./: .gitignore  Cargo.toml
src/: main.rs
