[package]
name = "aemo-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["default"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = { version = "0.8.14" }
tokio = { version = "1.0.1", features = ["full"] }
tokio-compat = { version = "0.1.6" }
