[package]
name = "aemo-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.8.2" }
log = { version = "0.4.11" }
reqwest = { version = "0.11.10", features = ["default", "json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = { version = "0.8.14" }
tokio = { version = "1.0.1", features = ["full"] }
tokio-compat = { version = "0.1.6" }
